MEFA VERSIONS

Version 3.0-3 -- May 20, 2009 (opened - r381)

    * report.mefa: dir argument became more transparent
      by using getwd().


Version 3.0-2 -- May 20, 2009 (closed - r381)

    * vec2dist: function to convert a vector to dist.
    * mfill, rdrop, cdrop: new functions to
      calculate matrix fill and drop rows/columns
      from matrices (similar to na.exclude).
    * documentation encoding problems fixed.
    * mat2list: new function converting a matrix
      into list (row or columnwise).


Version 3.0-1 -- May 1, 2009 (closed - r363)

    * citation info: updated in the Rd files.
    * class attribute of mefa objects: the 'list'
      element has been removed in order to leave
      as.mefa.default work properly.
    * as.mefa/as.stcs: redefined as method, together
      with 'default' class, and a bunch of coercion
      methods added (matrix, list, array, data.frame).


Version 3.0-0 -- March 7, 2009 (closed - r320)

    * Version update: to indicate that this is the
      published version.
    * CITATION: points to JSS paper.
    * vignette: changes made by Achim Zeileis to
      conform to the final version of the JSS paper.
    * Suggests: MASS, ade4 and vegan because of the
      vignette.


Version 2.1-3 -- February 17, 2009 (closed - r318)

    * documentation fixes: due to stricter R CMD
      check of R devel.
    * vignette: minor changes to mirror requested
      changes in JSS manuscript
    * citation: new citation of accepted JSS
      manuscript added.


Version 2.1-2 -- January 6, 2009 (closed - r315)

    * suggests and vignette dependencies: ade4 and
      vegan added, due to error reported by Kurt
      Hornik after CRAN submission.
    * label: assigns and returns a label stored as
      a deparsed attribute. Can be used to store
      relevant information on the current data
      set. Note: inheritance is not implemented,
      so by any transformation of the object
      into another one, it is lost.