@@ -1,0 +1,6 @@
+dist2vec <-
+function(x)
+{
+    attributes(x) <- NULL
+    x
+}
