@@ -1,0 +1,3 @@
+is.dist <-
+function(x)
+   inherits(x, "dist")
